--- a/composer.json
+++ b/composer.json
@@ -95,6 +95,7 @@
         "test": "Run tests"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.48"
+        "friendsofphp/php-cs-fixer": "^3.48",
+        "symfony/maker-bundle": "^1.52"
     }
 }
