--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,6 +39,10 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api$, roles: PUBLIC_ACCESS }
+        - { path: ^/api/bookmarks, roles: PUBLIC_ACCESS }
+        - { path: ^/api/users/\d+$, roles: PUBLIC_ACCESS }
+        - { path: ^/api/*, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
