--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,7 +42,8 @@ security:
         - { path: ^/api$, roles: PUBLIC_ACCESS }
         - { path: ^/api/bookmarks, roles: PUBLIC_ACCESS }
         - { path: ^/api/users/\d+$, roles: PUBLIC_ACCESS }
-        - { path: ^/api/*, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/users/\d+/avatar$, roles: PUBLIC_ACCESS}
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
