Modification sur le composer.json et le composer.lock pour les adapter au fonctionnement sous windows (et linux normalement). Le composer.json n'a été modifié que pour le script test:codeception, et le composer.lock a été modifié par composer update/ Lancement du script cs-fixer n'agissant que sur les line separators ou sur des paramètres pouvant être nuls (? devant).

--- a/composer.json
+++ b/composer.json
@@ -91,9 +91,9 @@
         ],
         "test:codeception": [
             "php vendor/bin/codecept clean",
-            "APP_ENV=test php bin/console doctrine:database:drop --force",
-            "APP_ENV=test php bin/console doctrine:database:create",
-            "APP_ENV=test php bin/console doctrine:schema:create --quiet",
+            "php bin/console doctrine:database:drop --force --env=test",
+            "php bin/console doctrine:database:create --env=test",
+            "php bin/console doctrine:schema:create --quiet --env=test",
             "php vendor/bin/codecept run --no-artifacts"
         ]
     },
